testbed/istio/gateway/templates/istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: banking-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banking
spec:
  hosts:
  - "*"
  gateways:
  - banking-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        host: develop-accounts-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /customers
    route:
    - destination:
        host: develop-customer-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /contacts
    route:
    - destination:
        host: develop-contacts-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /transactions
    route:
    - destination:
        host: develop-transactions-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /monitoring
    route:
    - destination:
        host: develop-monitoring-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /tests
    route:
    - destination:
        host: develop-tests-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - headers:
        preview:
          exact: 'true'
    route:
    - destination:
        host: develop-testdata-service-preview.develop.svc.cluster.local
  - match:
    - uri:
        prefix: /testdata
    route:
    - destination:
        host: develop-testdata-service.develop.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
  - match:
    - headers:
        preview:
          exact: 'true'
    route:
    - destination:
        host: develop-frontend-service-preview.develop.svc.cluster.local
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: develop-frontend-service.develop.svc.cluster.local
        port:
          number: 80
